@@ -9,6 +9,8 @@
    with normalization.
  * Only one shuffle at a time is now stored in memory (big savings, obviously).
  * Fixed bug that was throwing off `guppy kr` shuffling significance estimation.
+ * `guppy pca` now defaults to scaling eigenvalues to percent variance; now has
+   a --raw-eval flag to specify otherwise.
 
 
 1.1.alpha05
